--- a/0130/css/email_editor.css
+++ b/0130/css/email_editor.css
@@ -119,6 +119,9 @@ body{
 #help p{
     padding-top: 8px;
 }
+.help-bullets{
+    margin-right: 24px;
+}
 .close{
     margin-top: 24px;
     padding: 0 5%;
