--- a/test_gioithieucongty/css/gioithieucongty.css
+++ b/test_gioithieucongty/css/gioithieucongty.css
@@ -107,6 +107,7 @@ footer{
 menu{
     border: 1px solid #046142;
     background-color: #037d54;
+    width: 100%;
     height: 48px;
 
     display: flex;
@@ -117,22 +118,23 @@ menu ul{
     display: flex;
     width: 70%;
 }
-#contact{
-    width: 10%;
-    text-align: center;
-}
+
 menu ul li{
     list-style-type: none;
     width: 100%;
 }
 
-menu a{
+menu ul a{
     display: block;
-    width: 100%;
     height: 48px;
 
     line-height: 48px;
-    text-align: center;
+    text-align: left;
+    padding: 0 10%;
+}
+menu #contact{
+    padding: 0 3%;
+    line-height: 48px;
 }
 menu a:hover{
     background-color: #046142;
@@ -145,6 +147,26 @@ menu p{
     text-transform: uppercase;
     font-weight: bold;
 }
+    .dropdown{
+        position: relative;
+    }
+    .dropdown_content{
+        width: 200%;
+        position: absolute;
+        top: 48px;
+        left: 0;
+        background-color: #037d54;
+
+        display: none;
+    }
+    .dropdown_content a{
+        padding-left: 3%;
+        color: white;
+        font-weight: bold;
+    }
+    .dropdown:hover .dropdown_content{
+        display: block;
+    }
 
 .cover_img{
     height: 500px;
