gioithieucongty_sticky_menu

--- a/test_gioithieucongty/css/gioithieucongty.css
+++ b/test_gioithieucongty/css/gioithieucongty.css
@@ -104,6 +104,11 @@ footer{
     font-weight: bold;
 }
 
+.menu_container_sticky{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 menu{
     border: 1px solid #046142;
     background-color: #037d54;
