--- a/web_clone/tonyrobbins/css/tonyrobbins3.css
+++ b/web_clone/tonyrobbins/css/tonyrobbins3.css
@@ -227,6 +227,7 @@ header{
             width: 350px;
             height: 250px;
             background-color: black;
+            opacity: 0.5;
             margin: 1em 0;
             display: flex;
             justify-content: center;
