--- a/web_clone/tonyrobbins/css/tonyrobbins.css
+++ b/web_clone/tonyrobbins/css/tonyrobbins.css
@@ -6,161 +6,181 @@ coverpic: #0A194E
 drop_highlight: #09A3CF
 featured: #F7F7F7
 featured text: #7E7E7E
- */
+*/
+
 *{
     margin: 0;
     padding: 0;
 }
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
 }
 a{
     text-decoration: none;
     color: black;
 }
-.heading{
-    display: flex;
-    justify-content: space-between;
-    background-color: black;
-    color: white;
+li{
+    list-style: none;
+}
 
-    padding: 0 3%;
-    height: 48px;
-}
-.contact_bar{
-    display: flex;
-    align-items: center;
-}
-.phone{
-    padding-right: 10%;
-    border-right: 2px solid white;
-    font-weight: bold;
-}
-    .phone a{
-        color: white;
-    }
-.social_media{
-    display: flex;
-    margin-left: 10%;
-}
-    .icon{
-        width: 16px;
-        height: 16px;
-        background-color: white;
-        margin-right: 12px;
-    }
-.login_btn{
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-    .login_btn a{
-        color: white;
-    }
 header{
-    display: flex;
-    justify-content: space-between;
-    padding: 0 3%;
-    height: 96px;
-    align-items: center;
-}
-
-menu ul{
-    display: flex;
-}
-menu ul li{
-    height: 96px;
-    line-height: 96px;
-}
-.dropdown{
-    position: relative;
-    cursor: pointer;
-}
-.drop_list{
-    position: absolute;
-    top: 96px;
-    left: 0;
-    display: none;
-    width: 300px;
-    background-color: black;
-}
-
-menu ul li{
-    list-style-type: none;
-    padding: 0 24px;
     text-transform: uppercase;
-    font-weight: bold;
 }
-.drop_list a{
-    display: block;
-    color: white;
-    padding: 0 5%;
-    transition: color .7s;
+.sticky{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    box-shadow: 0 -2em 1em 1.5em;
 }
+    .header_social{
+        display: flex;
+        justify-content: space-between;
+        /* align-items: center ; */
 
-.dropdown:hover{
-    background-color: black;
-    color: white;
-}
-.dropdown:hover .drop_list{
-    display: block;
-}
-.drop_list a:hover{
-    color: #09A3CF;
-}
-.search_icon{
-    width: 30px;
-    height: 30px;
-    background-color: black;
-    cursor: pointer;
-}
+        background-color: black;
+        /* color: white; */
+        font-weight: bold;
 
-.coverpic{
-    height: 800px;
-    background-color: #0A194E;
+        padding: 1em 5%;
+    }
+        .header_social a{
+            color: white;
+        }
+        .social_container{
+            display: flex;
+        }
+        .phone{
+            padding-right: 1em;
+            border-right: 1px solid white;
+            display: flex;
+            align-items: center;
+        }
+        .social_channel{
+            display: flex;
+            align-items: center;
+            padding: 0 1em;
+        }
+        .icon{
+            background-color: white;
+            width: 1.5em;
+            height: 1.5em;
+
+            margin: 0 0.5em;
+        }
+    .login_btn a{
+        transition: color .5s;
+    }
+    .login_btn a:hover{
+        color: #09A3CF;
+    }
+    
+    menu{
+        padding: 0 5%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 6em;
+        background-color: white;
+    }
+        menu h1{
+            font-size: 2em;
+        }
+        menu ul{
+            display: flex;
+            justify-content: space-between;
+            height: 100%;
+        }
+        .dropdown{
+            padding: 0 2em;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            cursor: pointer;
+
+            position: relative;
+        }
+        .dropdown:hover{
+            background-color: black;
+            color: white;
+        }
+
+        .drop_list{
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            z-index: inherit;
+            width: max-content;
+            transition: .5s;
+        }
+        .dropdown:hover .drop_list{
+            display: block;
+        }
+        .drop_list a{
+            background-color: black;
+            color: white;
+            padding: 1em 1.5em;
+            display: block;
+            transition: .5s;
+        }
+        .drop_list a:hover{
+            color: #09A3CF;
+        }
+
+        .search_icon{
+            width: 2em;
+            height: 2em;
+            background-color: black;
+            cursor: pointer;
+        }
+
+.cover_img{
+    width: 100%;
+    height: 700px;
+    background-color: #051343;
+    color: white;
+    text-transform: uppercase;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-.coverpic h2{
-    color: white;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 150px;
+    align-items: center;
+
     font-weight: bold;
 }
-.coverpic p{
+.cover_img a{
     color: white;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
 }
-.saveyourspot{
-    margin-top: 24px;
-}
-.saveyourspot p{
-    background-color: #14AECF;
-    font-size: 16px;
-    margin: auto;
-    width: 20%;
-    height: 72px;
-    line-height: 72px;
-    transition: .3s;
-}
-.saveyourspot p:hover{
-    background-color: #14a0cf;
-}
+    .cover_img h2{
+        font-size: 7em;
+    }
+    .cover_img p{
+        font-size: 1.5em;
+    }
+    .saveyourspot_btn{
+        background-color: #14AECF;
+        padding: 1em 2em;
+        margin-top: 2em;
+    }
+        .saveyourspot_btn p{
+            font-size: 1em;
+        }
+        .saveyourspot_btn:hover{
+            background-color: #09A3CF;
+        }
+
 
 .featured_in{
     background-color: #F7F7F7;
-    padding-bottom: 36px;
+    padding-bottom: 3em;
 }
     .heading_featured{
         display: flex;
         justify-content: center;
-        padding: 16px 0;
+        padding: 1em 0;
         font-weight: bold;
         color: #7E7E7E;
         text-transform: uppercase;
@@ -177,32 +197,38 @@ menu ul li{
     }
 
 .mission{
-    padding: 72px 15%;
+    padding: 3em 0;
+    text-align: center;
+    line-height: 2;
+
+    width: 50%;
+    margin: auto;
+}
+.category_container{
     text-align: center;
 }
-.area_master{
-    text-align: center;
-}
-    .heading_master h2{
+    .category_header h2{
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 48px;
+        font-size: 3em;
     }
-    .heading_master p{
+    .category_intro{
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 1em;
+        margin-top: 0.5em;
     }
     .thumbnail_container{
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        padding: 48px 15%;
+        padding: 3em 15%;
     }
         .thumbnail{
             width: 350px;
             height: 250px;
             background-color: black;
-            margin: 12px 0;
+            opacity: 0.5;
+            margin: 1em 0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -211,5 +237,5 @@ menu ul li{
             color: white;
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 1.5em;
         }
