--- a/00_index/css/index.css
+++ b/00_index/css/index.css
@@ -100,15 +100,25 @@ li{
 .footer{
     background-color: #2C7ABE;
     text-align: center;
+    padding: 2em 0;
+
 }
-    .footer p{
-        padding: 2em 0;
+    .footer a{
         color: white;
         font-weight: bold;
         font-size: 1.5em;
         text-transform: uppercase;
+        text-decoration: underline;
     }
-@media (max-width: 900px){
+    .footer a:hover{
+        color: #F18121;
+    }
+
+
+
+
+    
+@media (max-width: 800px){
     .section{
         flex-direction: column;
         align-items: center;
