--- a/web_clone/tonyrobbins/css/tonyrobbins_home.css
+++ b/web_clone/tonyrobbins/css/tonyrobbins_home.css
@@ -3,239 +3,310 @@ login_btn_color: #848FA5
 saveyourspot_btn: #14AECF
 downsymbol: &darr;
 coverpic: #0A194E
-drop_highlight: #09A3CF
+drop_highlight: #09A3CF   
 featured: #F7F7F7
 featured text: #7E7E7E
+com_icon: #C1C1C1
 */
 
 *{
     margin: 0;
-    padding: 0;
+    padding: 0  ;
 }
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    /* line-height: 1.5vw; */
+    line-height: 1.5;
+    
 }
 a{
     text-decoration: none;
-    color: black;
+    color: inherit;
 }
 li{
     list-style: none;
 }
-
-header{
-    text-transform: uppercase;
-}
 .sticky{
     position: sticky;
-    top: 0;
     z-index: 10;
-    box-shadow: 0 -2em 1em 1.5em;
+    top: 0;
+    box-shadow: 0 -2vh 1vh 2vh;
 }
-    .header_social{
+.header_social{
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+
+    padding: 1vh 5vw;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+    .social_container{
         display: flex;
-        justify-content: space-between;
-        /* align-items: center ; */
-
-        background-color: black;
-        /* color: white; */
-        font-weight: bold;
-
-        padding: 1em 5%;
+        align-items: center;
     }
-        .header_social a{
-            color: white;
-        }
-        .social_container{
-            display: flex;
-        }
-        .phone{
-            padding-right: 1em;
-            border-right: 1px solid white;
-            display: flex;
-            align-items: center;
-        }
+
         .social_channel{
             display: flex;
-            align-items: center;
-            padding: 0 1em;
-        }
-        .icon{
-            background-color: white;
-            width: 1.5em;
-            height: 1.5em;
+            /* align-items: center; */
 
-            margin: 0 0.5em;
+            margin: 0 1vw;
+            padding: 0 1vw;
+            border-left: 1px solid white;
         }
-    .login_btn a{
-        transition: color .5s;
-    }
-    .login_btn a:hover{
-        color: #09A3CF;
-    }
-    
-    menu{
-        padding: 0 5%;
+            .social_channel a{
+                margin-right: 1vw;
+            }
+            .icon{
+                width: 1.5em;
+                height: 1.5em;
+                background-color: white;
+            }
+    .login_btn{
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        height: 6em;
-        background-color: white;
     }
-        menu h1{
-            font-size: 2em;
+        .login_btn a{
+            color: rgb(200, 200, 200);
+            transition: 0.3s;
         }
-        menu ul{
-            display: flex;
-            justify-content: space-between;
-            height: 100%;
-        }
-        .dropdown{
-            padding: 0 2em;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            cursor: pointer;
-
-            position: relative;
-        }
-        .dropdown:hover{
-            background-color: black;
+        .login_btn a:hover{
             color: white;
         }
 
+menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5vw;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    background-color: white;
+}
+    .menu_main{
+        display: flex;
+        align-self: stretch;
+        flex-wrap: wrap;
+
+    }
+        .menu_item{
+            display: flex;
+            align-items: center;
+            min-width: max-content;
+            padding: 4vh 1vw;
+
+        }
+
+        .menu_item:hover{
+            background-color: black;
+            transition: 0.5s;
+        }
+            .menu_item:hover p{
+                color: white;
+            }
+
+        .search_fake_icon{
+            width: 1.5em;
+            height: 1.5em;
+            background-color: black;
+        }
+
+    .dropdown{
+        position: relative;
+    }
+    .dropdown:hover .drop_list{
+        visibility: visible;
+    }
+
         .drop_list{
-            display: none;
+            visibility: hidden;
+
+            background-color: black;
+            color: white;
+            padding: 2vh 0;
+
             position: absolute;
             top: 100%;
             left: 0;
-            z-index: inherit;
-            width: max-content;
-            transition: .5s;
         }
-        .dropdown:hover .drop_list{
-            display: block;
-        }
-        .drop_list a{
-            background-color: black;
-            color: white;
-            padding: 1em 1.5em;
-            display: block;
-            transition: .5s;
-        }
-        .drop_list a:hover{
-            color: #09A3CF;
-        }
+            .drop_list a{
+                display: block;
 
-        .search_icon{
-            width: 2em;
-            height: 2em;
-            background-color: black;
-            cursor: pointer;
-        }
+                padding: 2vh 1vw;
+                width: max-content;
+            }
+            .drop_list a:hover{
+                color: #09A3CF;
+                transition: 0.5s;
+            }
 
 .cover_img{
-    width: 100%;
-    height: 700px;
-    background-color: #051343;
-    color: white;
+    position: relative;
     text-transform: uppercase;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
     font-weight: bold;
 }
-.cover_img a{
-    color: white;
-}
-    .cover_img h2{
-        font-size: 7em;
+    .fake_cover_img{
+        width: 100vw;
+        height: 90vh;
+        background-color: #0D164A;
     }
-    .cover_img p{
-        font-size: 1.5em;
+    .cover_img_text{
+        color: white;
+        text-align: center;
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
-    .saveyourspot_btn{
-        background-color: #14AECF;
-        padding: 1em 2em;
-        margin-top: 2em;
-    }
-        .saveyourspot_btn p{
-            font-size: 1em;
+        .cover_img_text h2{
+            font-size: 7em;
+            width: 90vw;
+            word-wrap: break-word;
+        }
+        .cover_img_text > p{
+            font-size: 1.5em;
+            width: 90vw;
+            word-wrap: break-word;
+        }
+        .saveyourspot_btn{
+            display: block;
+            width: max-content;
+            margin: auto;
+            margin-top: 5vh;
+            padding: 2vh 5vw;
+            background-color: #14AECF;
+
+            font-size: 90%;
         }
         .saveyourspot_btn:hover{
             background-color: #09A3CF;
+            transition: 0.5s;
         }
-
 
 .featured_in{
-    background-color: #F7F7F7;
-    padding-bottom: 3em;
+    background-color: #dddddd;
+    text-align: center;
+    padding: 3vh 5vw;
+    font-weight: bold;
+    color: #666666;
 }
-    .heading_featured{
-        display: flex;
-        justify-content: center;
-        padding: 1em 0;
-        font-weight: bold;
-        color: #7E7E7E;
-        text-transform: uppercase;
-    }
     .com_container{
         display: flex;
-        justify-content: space-between;
-        padding: 0 10%;
+        justify-content: center;
+
+        margin-top: 3vh;
     }
-    .com{
-        background-color: black;
-        width: 128px;
-        height: 48px;
-    }
+        .com_icon{
+            width: 10em;
+            height: 3em;
+            background-color: #888888;
+
+            margin: 0 4vw;
+        }
 
 .mission{
-    padding: 3em 0;
-    text-align: center;
-    line-height: 2;
-
-    width: 50%;
+    padding: 10vh 5vw;
+    width: 50vw;
     margin: auto;
+
 }
+    .mission p{
+        line-height: 2;
+        text-align: center;
+    }
+
 .category_container{
     text-align: center;
+    text-transform: uppercase;
 }
-    .category_header h2{
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 3em;
-    }
-    .category_intro{
-        text-transform: uppercase;
-        font-size: 1em;
-        margin-top: 0.5em;
-    }
+        .category_header h2{
+            font-size: 3em;
+        }
     .thumbnail_container{
+        max-width: 70vw;
+        margin: auto;
+        margin-top: 5vh;
+
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
-        padding: 3em 15%;
     }
         .thumbnail{
-            width: 350px;
-            height: 250px;
-            background-color: black;
-            opacity: 0.5;
-            margin: 1em 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            padding: 2vh 1vw;
+            position: relative;
         }
-        .thumbnail p{
-            color: white;
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 1.5em;
+            .thumbnail_fake_img{
+                width: 20em;
+                height: 17em;
+                background-color: #888888;
+            }
+            .thumbnail_text{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                width: max-content;
+                word-wrap: break-word;
+                color: white;
+                font-weight: bold;
+                font-size: 1.25em;
+            }
+
+footer{
+    background-color: black;
+    color: white;
+}
+
+.footer_element{
+    padding: 0 5vw;
+}
+footer h3{
+    font-size: 1em;
+}
+footer p{
+    font-size: 80%;
+}
+
+.footer_main{
+    display: flex;
+    justify-content: space-between;
+    width: 70vw;
+
+    flex-wrap: wrap;
+    margin: auto;
+    padding-top: 5vh;
+}
+    .company_info, .quick_link, .contact{
+        padding: 3vh 1vw;
+        width: 30%;
+    }
+
+
+    .quick_link{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+        .quick_link a{
+            width: 45%;
+            margin-bottom: 3vh;
         }
+@media (max-width: 1400px){
+    .contact{
+        width: 100%;
+    }
+    .company_info{
+        width: 40%;
+    }
+    .quick_link{
+        width: 50%;
+    }
+}
+@media (max-width: 850px){
+    .company_info, .quick_link, .contact{
+        width: 100%;
+}
