--- a/web_clone/tonyrobbins/css/tonyrobbins_home.css
+++ b/web_clone/tonyrobbins/css/tonyrobbins_home.css
@@ -14,10 +14,10 @@ com_icon: #C1C1C1
     padding: 0  ;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    /* line-height: 1.5vw; */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
-    
+    font-size: 18px;
+    overflow-x: hidden;
 }
 a{
     text-decoration: none;
@@ -79,26 +79,59 @@ menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 5vw;
+    flex-wrap: wrap;
+    padding-left: 5vw;
+    padding-right: 10vw;
+
     font-weight: bold;
     text-transform: uppercase;
 
     background-color: white;
+    position: relative;
+
 }
+
+
+    .show_menu_container{
+        display: none;
+    }
+        .show_menu_btn{
+            width: 2em;
+            height: 2em;
+            background-color: black;
+
+            cursor: pointer;
+        }
+    .menu_header{
+        padding: 1em 0;
+    }
+    /* .menu_header, .show_menu_container{
+        display: flex;
+        align-items: center;
+        margin: 2em 0;
+    } */
     .menu_main{
         display: flex;
         align-self: stretch;
         flex-wrap: wrap;
 
+        width: 70%;
+        min-width: max-content;
     }
         .menu_item{
             display: flex;
             align-items: center;
             min-width: max-content;
-            padding: 4vh 1vw;
-
+            padding: 3vh 1vw;
         }
+        .search_icon{
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 5vw;
 
+            cursor: pointer;
+        }
         .menu_item:hover{
             background-color: black;
             transition: 0.5s;
@@ -106,7 +139,7 @@ menu{
             .menu_item:hover p{
                 color: white;
             }
-
+        
         .search_fake_icon{
             width: 1.5em;
             height: 1.5em;
@@ -123,6 +156,8 @@ menu{
         .drop_list{
             visibility: hidden;
 
+            width: max-content;
+            max-width: 40vw;
             background-color: black;
             color: white;
             padding: 2vh 0;
@@ -131,11 +166,16 @@ menu{
             top: 100%;
             left: 0;
         }
+        .drop_to_left{
+            left: auto;
+            right: 0;
+
+            text-align: right;
+        }
             .drop_list a{
                 display: block;
 
                 padding: 2vh 1vw;
-                width: max-content;
             }
             .drop_list a:hover{
                 color: #09A3CF;
@@ -151,6 +191,10 @@ menu{
         width: 100vw;
         height: 90vh;
         background-color: #0D164A;
+        overflow: hidden;
+    }
+    .fake_cover_img img{
+        opacity: 0.7;
     }
     .cover_img_text{
         color: white;
@@ -162,12 +206,12 @@ menu{
         transform: translate(-50%, -50%);
     }
         .cover_img_text h2{
-            font-size: 7em;
+            font-size: 12vh;
             width: 90vw;
             word-wrap: break-word;
         }
         .cover_img_text > p{
-            font-size: 1.5em;
+            font-size: 3vh;
             width: 90vw;
             word-wrap: break-word;
         }
@@ -195,16 +239,20 @@ menu{
 }
     .com_container{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        max-width: 70vw;
+        margin: auto;
 
         margin-top: 3vh;
     }
         .com_icon{
-            width: 10em;
-            height: 3em;
+            width: 150px;
+            height: 50px;
             background-color: #888888;
 
-            margin: 0 4vw;
+            margin: 2vh 2vw;
         }
 
 .mission{
@@ -228,7 +276,8 @@ menu{
     .thumbnail_container{
         max-width: 70vw;
         margin: auto;
-        margin-top: 5vh;
+        /* margin-top: 5vh; */
+        padding: 5vh 0;
 
         display: flex;
         justify-content: center;
@@ -239,8 +288,8 @@ menu{
             position: relative;
         }
             .thumbnail_fake_img{
-                width: 20em;
-                height: 17em;
+                width: 400px;
+                height: 300px;
                 background-color: #888888;
             }
             .thumbnail_text{
@@ -260,53 +309,81 @@ footer{
     background-color: black;
     color: white;
 }
-
-.footer_element{
-    padding: 0 5vw;
-}
 footer h3{
     font-size: 1em;
+    text-transform: uppercase;
 }
-footer p{
+footer p, .quick_link a{
     font-size: 80%;
+}
+.footer_element{
+    padding: 10vh 0;
+    max-width: 70vw;
+    margin: auto;
 }
 
 .footer_main{
     display: flex;
     justify-content: space-between;
-    width: 70vw;
 
     flex-wrap: wrap;
-    margin: auto;
-    padding-top: 5vh;
 }
-    .company_info, .quick_link, .contact{
-        padding: 3vh 1vw;
-        width: 30%;
+    .footer_main_item{
+        padding: 1em;
+        max-width: 25em;
     }
-
-
+    .company_info{
+        width: max-content;
+    }
+        .company_address{
+            margin-top: 1em;
+        }
+        .social_media{
+            margin-top: 2.5em;
+        }
+            .social_media_icon{ 
+                display: flex;
+                margin-top: 0.5em;
+            }
+            .social_media_icon a{
+                margin-right: 1em;
+            }
+            .media_fake_icon{
+                width: 1em;
+                height: 1em;
+                background-color: white;
+            }
     .quick_link{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        width: 20em;
+
+        height: fit-content;
     }
         .quick_link a{
-            width: 45%;
-            margin-bottom: 3vh;
+            display: block;
+
+            min-width: 10em;
+            margin-right: 1em;
         }
-@media (max-width: 1400px){
-    .contact{
-        width: 100%;
+        .quick_link a:hover{
+            color: #09A3CF;
+            transition: 0.5s;
+        }
+    .contact h3{
+        color: #09A3CF;
     }
-    .company_info{
-        width: 40%;
+    .inquiries_text, .support_text{
+        margin-top: 1em;
     }
-    .quick_link{
-        width: 50%;
+    .support{
+        margin-top: 3em;
     }
-}
-@media (max-width: 850px){
-    .company_info, .quick_link, .contact{
-        width: 100%;
+.copyright_statement{
+    padding: 0.5em 5vw;
+    font-size: 70%;
+    border-top: 1px solid white;
+    background-color: black;
+    color: white;
 }
