--- a/web_clone/tonyrobbins/css/tonyrobbins_home_res.css
+++ b/web_clone/tonyrobbins/css/tonyrobbins_home_res.css
@@ -3,7 +3,7 @@
         font-size: 20px;
     }
     header{
-        width: 100%;
+        /* width: 100%; */
     }
     .sticky{
         position: inherit;
