--- a/web_clone/tonyrobbins/css/tonyrobbins_home.css
+++ b/web_clone/tonyrobbins/css/tonyrobbins_home.css
@@ -11,13 +11,13 @@ com_icon: #C1C1C1
 
 *{
     margin: 0;
-    padding: 0  ;
+    padding: 0;
+    max-width: 100vw;
 }
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
     font-size: 18px;
-    overflow-x: hidden;
 }
 a{
     text-decoration: none;
