--- a/0304/css/home_master.css
+++ b/0304/css/home_master.css
@@ -21,13 +21,15 @@ header{
 
 }
 .logo{
-    width: 50em;
+    width: 50vw;
     height: 10em;
     margin: auto;
 }
     .logo img{
         width: 100%;
         height: 100%;
+        object-fit: cover;
+        object-position: 60%;
     }
 
 
