--- a/0304/css/home_master.css
+++ b/0304/css/home_master.css
@@ -53,7 +53,8 @@ header{
         /* text-transform: capitalize; */
     }
     .content_warp{
-        padding: 3em 1em;
+        padding: 3em;
+        padding-left: 1em;
         flex-shrink: 10;
     }
         /* .content_warp h2{
