--- a/web_clone/nlpkhaisang/css/nlpkhaisang.css
+++ b/web_clone/nlpkhaisang/css/nlpkhaisang.css
@@ -127,11 +127,16 @@ header{
 
             transition: 0.5s;
         }
-        menu ul li a:hover{
+        /* menu ul li a:hover{
             background-color: white;
             color: black;
-        }
-
+        } */
+        /* .magic_line{
+            width: 100%;
+            height: 0.1em;
+            margin-bottom: 1em;
+            background-color: white;
+        } */
 
 
 .cover_img{
