--- a/0306/css/tinhocsaoviet.css
+++ b/0306/css/tinhocsaoviet.css
@@ -128,6 +128,11 @@ aside{
         display: flex;
         justify-content: space-between;
     }
+    .featured a{
+        display: block;
+        width: fit-content;
+        
+    }
     .featured h2{
         color: #0082c8;
     }
