--- a/0311/css/dongho.css
+++ b/0311/css/dongho.css
@@ -26,6 +26,9 @@ menu ul li a{
     padding: 0 1em;
     border-right: 1px solid lightgray;
 }
+menu ul li a:hover{
+    text-decoration: underline;
+}
     menu ul li:last-child a{
         border-right: none;
     }
@@ -147,4 +150,34 @@ header{
 
             position: absolute;
             top: 2rem;
+        }
+
+.featured-service{
+    background-color: black;
+    color: white;
+    padding: 5em 10em;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+    .thumb-featured{
+        display: flex;
+        /* width: fit-content; */
+        align-items: center;
+        
+    }
+        .thumb-featured .icon-area{
+            width: 50px;
+            height: 50px;
+            background-color: white;
+
+            margin-right: 2em;
+        }
+        .thumb-featured .text-area h4{
+            text-transform: capitalize;
+        }
+        .thumb-featured .text-area p{
+            font-size: 90%;
         }
