--- a/00_index/css/index.css
+++ b/00_index/css/index.css
@@ -1,132 +1,41 @@
-/* 
-body-bg: #EBEBEB
-orange: #F18121
-blue: #2C7ABE
-
-ltblue#56CCFA
-ltorange#EEB686
-*/
-*{
-    margin: 0;
-    padding: 0;
+header{
+    background-color: var(--bs-dark);
+    color: white;
+    padding: 1rem 0;
+    margin-bottom: 3rem;
 }
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #EBEBEB;
+h1, h2{
+    text-transform: uppercase;
+    font-weight: bold;
 }
 a{
-    text-decoration: none;
     color: inherit;
 }
-li{
-    list-style: none;
-}
-.header{
-    text-transform: uppercase;
-    padding: 5em 0;
-    text-align: center;
+    header h1{
+        margin-bottom: 1rem;
+    }
+    header p{
+        font-size: 1.5rem;
+    }
 
-    background-color: #2C7ABE;
+b{
+    color: var(--bs-danger);
+}
+.card-header{
+    background-color: var(--bs-dark);
     color: white;
 }
-    .header h1{
-        margin: 1em 0;
-    }
-    .header p{
-        font-size: 1.5em;
-    }
-.section{
-    display: flex;
-    justify-content: center;
-    padding: 1em 5em;
+
+footer{
+    background-color: var(--bs-dark);
+    color: white;
+    padding: 1rem 0;
+    margin-top: 3rem;
 }
-
-.item-container{
-    width: 25vw;
-    min-width: max-content;
-    background-color: white;
-    padding: 1em;
-    margin: 1em;
-
-    box-shadow: 5px -5px 10px -10px;
-}
-    .item-container-header{
-        /* width: 100%; */
-        text-align: center;
-        /* margin: 1em; */
-
-        padding: 1em 0;
-        text-transform: uppercase;
-        background-color: #F18121;
-        color: white;
+    footer i{
+        font-size: 2rem;
+        margin-right: 1rem;
     }
-    .item{
-        padding: 1em;
-        /* padding-right: 3em; */
-        margin: 1em;
-
-        background-color: #2C7ABE;
-        color: white;
+    footer a:hover{
+        color: var(--bs-warning);
     }
-    .item:hover{
-        background-color: #F18121;
-        color: black;
-    }
-        /* .item ul{
-
-        } */
-        .item li{
-            /* text-indent: 2em; */
-            margin-top: 1em;
-        }
-
-            .date{
-                font-weight: bold;
-                text-decoration: underline;
-                text-align: right;
-            }
-            .item h3{
-                font-size: 1.2em;
-                /* margin-top: 1em; */
-            }
-            .note{
-                font-style: italic;
-                font-size: 0.8em;
-            }
-            .item a{
-                display: block;
-                width: max-content;
-            }
-            .item a:hover{
-                color: white;
-            }
-.footer{
-    background-color: #2C7ABE;
-    text-align: center;
-    padding: 2em 0;
-
-}
-    .footer a{
-        color: white;
-        font-weight: bold;
-        font-size: 1.5em;
-        text-transform: uppercase;
-        text-decoration: underline;
-    }
-    .footer a:hover{
-        color: #F18121;
-    }
-
-
-
-
-    
-@media (max-width: 800px){
-    .section{
-        flex-direction: column;
-        align-items: center;
-    }
-    .item-container{
-        width: 100%;
-    }
-}
