--- a/web_clone/nlpkhaisang/css/nlpkhaisang.css
+++ b/web_clone/nlpkhaisang/css/nlpkhaisang.css
@@ -127,10 +127,10 @@ header{
 
             transition: 0.5s;
         }
-        /* menu ul li a:hover{
+        menu ul li a:hover{
             background-color: white;
             color: black;
-        } */
+        }
         /* .magic_line{
             width: 100%;
             height: 0.1em;
@@ -214,14 +214,16 @@ header{
 
     .thumb_img{
         width: 100%;
-        height: 250px;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         overflow: hidden;
     }
         .thumb_img img{
-            width: 110%;
-            object-fit: cover;
-            object-position: center;
+            width: 100%;
+            display: block;
         }
     .thumb_deco{
         height: 10px;
@@ -265,17 +267,17 @@ header{
 
     background-color: white;
 
-    transition: 0.5s;
+    transition: 0.3s;
 }
 .featured_thumb:hover .pop_up{
-    max-height: 500px;
+    max-height: 300px;
 
-    transition-delay: 0.3s;
+    transition-delay: 0.2s;
 
 }
 
 .featured_thumb{
-    transition: 0.5s;
+    transition: 0.3s;
 
 }
 .featured_thumb:hover{
